# OpMech_GraphRag

./: .env.example  .gitignore  Graph_TRD  OpMech_GraphRAG_Evaluation_Report.md  README.md  Strategic_Analysis_Report.md  docker-compose.yml  pyproject.toml  query_results.json  run_analysis_queries.py  start_demo.sh  strategic_analysis_results.json
dashboard/: how-it-works.html  index.html  insights.html  queries.html  script.js  styles.css
docs/: MOE_Architecture_Technical_Document.py  MOE_Architecture_Technical_Documentation.docx  MoE_Graph_Builder_Pipeline_Documentation.docx  OpMech_Chatbot_Response_Fix.md  OpMech_Complete_Fix_Prompt.md  OpMech_Complete_Mode_Selection_v2.md  OpMech_Debug_Gross_Margin_Fix.md  OpMech_Diagnosis_and_Fix_Prompt.md  OpMech_Diagnosis_and_Fix_Prompt_v2.md  OpMech_Documentation_Generator_Prompt.md  OpMech_Dynamic_MultiPage_Frontend_Prompt.md  OpMech_Evidence_Grounding_7B_Optimized.md  OpMech_Frontend_Showcase_Prompt.md  OpMech_Generalized_Temporal_Enhancements.md  OpMech_GraphRAG_Complete_Documentation.docx  OpMech_GraphRag_comuttaor implementation_plan  OpMech_Hop_Termination_Diagnosis_Fix.md  OpMech_Hybrid_Query_Classification_Prompt.md  OpMech_Production_System_Complete.md  OpMech_Temporal_Direction_Fix.md  OpMech_Unified_Architecture_Fix.md  OpMech_complete doc  TECHNICAL_DOCUMENTATION.docx  TECHNICAL_DOCUMENTATION.md
frontend/: package-lock.json  package.json
scripts/: build_graph.py  create_pipeline_doc.py  download_models.py  evaluate.py  fetch_filings.py  generate_documentation.js  generate_gold_standard.py  graph_rag_query.py  (+9 more)
(+130 files in other folders)
